--- a/hello/views/index.html
+++ b/hello/views/index.html
@@ -1,11 +1,22 @@
 <!DOCTYPE html>
-<html ng-app>
+<html lang="en" ng-app>
 <head>
 <meta charset="EUC-KR">
 <title>Insert title here</title>
- <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.9/angular.min.js"></script>
+	<script src="//code.jquery.com/jquery-1.12.0.min.js"></script>
+ 	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.9/angular.min.js"></script>
 </head>
 <body>
-
+<div>
+	<label> 이름 : </label>
+	<input type="text" ng-model="yourName" placeholder="Enter a name here">
+      <hr>
+      <h1>Hello {{yourName}}!</h1>
+</div>
+<script>
+$(function() {
+	alert('jQuery도 정상 작동!!');
+});
+</script>
 </body>
 </html>
